[tool.poetry]
name = "content_size_limit_asgi"
version = "0.1.5"
description = "An ASGI3 middleware to implement maximum content size limits (mostly useful for HTTP uploads)"
authors = ["Steinn Eldjárn Sigurðarson <steinnes@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
[tool.poetry.dev-dependencies]
pytest = "^6.1"
pytest-cov = "^2.7"
flake8 = "^3.7"
asynctest = "^0.13.0"
pytest-asyncio = "^0.10.0"
requests = "^2.22"
black = {version = "^18.3-alpha.0", allow-prereleases = true}
starlette = "^0.14.1"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
